fixed pagination query and updated query logic
