# backend/internal/assets/openapi.yaml
@@ -112,6 +112,19 @@ paths:
       summary: List Projects
       security:
         - bearerAuth: []
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 10
       responses:
         "200":
           description: List of projects
@@ -223,9 +236,49 @@ paths:
           required: true
           schema:
             type: integer
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 10
       responses:
         "200":
           description: Deployment history
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PaginatedApiResponse"
+
+  /deployments:
+    get:
+      tags:
+        - Deployments
+      summary: Get Global Deployment History
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 10
+      responses:
+        "200":
+          description: Global deployment history
           content:
             application/json:
               schema:
