# backend/internal/modules/deployment/dtos/response/deployment-dto.go
@@ -1,14 +1,16 @@
 package response
 
-import "time"
+import (
+	"time"
+
+	projecResponse "github.com/gianghp/statify/internal/modules/project/dtos/response"
+)
 
 type DeploymentDto struct {
-	ID                 uint       `json:"id"`
-	ProjectID          uint       `json:"project_id"`
-	Status             string     `json:"status"`
-	OutputPrefix       *string    `json:"output_prefix"`
-	SourceZipObjectKey *string    `json:"source_zip_object_key"`
-	ValidationError    *string    `json:"validation_error"`
-	CreatedAt          time.Time  `json:"created_at"`
-	FinishedAt         *time.Time `json:"finished_at"`
+	ID              uint                       `json:"id"`
+	Project         *projecResponse.ProjectDto `json:"project,omitempty"`
+	Status          string                     `json:"status"`
+	ValidationError *string                    `json:"validation_error,omitempty"`
+	CreatedAt       time.Time                  `json:"created_at"`
+	FinishedAt      *time.Time                 `json:"finished_at,omitempty"`
 }
